@@ -20,7 +20,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <div id="qunit-fixture1"></div>
+  <div id="qunit-fixture1" style="margin: 100px"></div>
   <div id="async-fixture" style="padding-left:300px"></div>
   <script src="libs/qunit/qunit-1.12.0.js"></script> 
 </body>
